@@ -25,7 +25,8 @@
  + New atlas format: AFTrack (OSZ)
  ~ CacheBox layer name uses now the map source name
  + New atlas format: AlpineQuestMap (AQM)
- + Ublox
+ + New atlas format: Ublox
+ ! Fixed OSM Hiking relief
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
